# vagrantfile-generator

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONFIG.md  CONTRIBUTING.MD  DEVELOPMENT.md  FOOTER_COMPLETE_FINAL.md  FOOTER_IMPLEMENTATION_COMPLETE.md  LICENSE  Makefile  README-CONTAINERS.md  README.md  apply_dark_tokens.py  compose-dev.yml  compose-prod.yml  compose.yml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  helm.mk  pyproject.toml  requirements.txt  setup-local-dev.sh  test-footer-quickstart.sh
.ai/docs/: MULTIUSER_SUPPORT_DISCUSSION.md  MULTIUSER_SUPPORT_PLAN.md
.github/: copilot-instructions.md
.github/workflows/: auto-tag.yml  helm-release.yml  release.yml
.pi/chains/: compat-audit.chain.md  feature-workflow-heavy.chain.md  feature-workflow-light.chain.md  feature-workflow.chain.md
.pi/plans/: .pi-guidance
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .env.example  Dockerfile  docker-entrypoint.sh  requirements.txt
backend/scripts/: migrate_boxes.py  migrate_projects_plugins.py
backend/src/: __init__.py  main.py
docs/: APP_OVERVIEW.md  AUTHENTICATION.md  ENVIRONMENTS.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ANALYSIS.md  Issues - Phase 1 - copy-on-write.md  JSON_STORAGE_ENHANCEMENTS.md  JSON_TO_DATABASE_MIGRATION_ANALYSIS.md  LOCAL_DEVELOPMENT.md  LOCAL_DEV_TRANSFORMATION.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PLUGIN_CONFIGURATION_IMPLEMENTATION.md  QUICK_REFERENCE.md  SHARED_RESOURCES.md  SHARED_RESOURCES_STATUS.md  UNIFIED_SHARED_RESOURCES_FIX.md  copy-on-write-implementation-plan.md
docs/dev/: data-models.md  environments.md  local-setup.md  roadmap.md
docs/setup/: SETUP_EMAIL_OTP.md  SETUP_OIDC.md
docs/testing/: TESTS.md  TESTS_E2E.md
docs/user/: AUTHENTICATION.md  SETUP_EMAIL_OTP.md  SETUP_OIDC.md  SHARED_RESOURCES.md
frontend/: Dockerfile  Dockerfile-dev  docker-entrypoint.sh  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.js
frontend/scripts/: e2e-cleanup.mjs
frontend/src/: basic-test.html  click-debug.html  debug.html  index-backup.html  index-improved.html  index-new.html  index.html  landing.html  main.js  simple-test.html
helm/vagrantfile-generator/: .helmignore  CHANGELOG.md  Chart.yaml  values.yaml
(+211 files in other folders)
